manifests/dash/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dash
  namespace: thetrains
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dash
  template:
    metadata:
      labels:
        app: dash
    spec:
      containers:
      - name: dash
        image: registry.gitlab.com/joshtingey/thetrains/dash:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8000
