manifests/dash/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dash
  namespace: thetrains
  labels:
    app: dash
spec:
  selector:
    app: dash
  ports:
    - name: http
      port: 80
      targetPort: 8000
